styles.css
:root {
    --content-width: calc(1500px + 2rem);
    --off-white: #d9d7d7;
    --lighter-blue: #292c3a;
    --lightest-blue: #535975;
    --dark-blue: #1d1f29;
}

html{
    scroll-behavior: smooth;
}

a{
    color: var(--off-white);
    line-height: 1em;
    text-decoration: none;
}

body {
    background-color: #1d1f29;
    display: flex;
    justify-content: center;
    flex-direction: column;
    font-family: "Barlow Condensed", Tahoma;
    color: var(--off-white);
    margin: 0;
}

::-webkit-scrollbar {
    width: 10px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    background: rgba(255, 255, 255, 0); 
  }
   
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: var(--lightest-blue); 
    border-radius: 5px;
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: var(--off-white); 
  }

#headshotMain {
    clip-path: circle();
    width: 300px;
    height: 300px;
    border-radius: 50%;
    border: 10px solid var(--off-white);
    margin: 2rem;
}

#mainBody {
    display: flex;
    justify-content: center;
    flex-direction: column;

}

#introTextBox{
    align-content: center;
    padding: 10px 30px;
}

#introDiv{
    display: flex;
    justify-content: center;
    align-content: center;
    align-items: center;
    max-width: calc(1200px + 2rem);
    padding: 1rem;
    filter: drop-shadow(8px 8px rgba(255, 255, 255, .05));
    transition: .5s;
    max-height: 400px;
}

#introDiv:hover{
    filter: drop-shadow(10px 10px rgba(255, 255, 255, .1));
    transition: .5s;
}

#introTitle{
    font-size: 60px;
    font-weight: bold;
}

#introDescription{
    font-size: 18px;
    padding: 1rem 0;
    line-height: 2rem;
}

#resumeDiv{
    width: 100%;
    background-color: var(--lighter-blue);
    display: flex;
    justify-content: center;
}

#topBox{
    width: 100%;
    display: flex;
    min-height: 54vh;
    justify-content: center;
    align-items: center;
    padding: 0 0 5rem 0;
}

#textBody{
    display: flex;
    flex-direction: column;
    justify-content: center;
    max-width: var(--content-width);
    width: 100%;
    padding: 2em;
}

#topBar{
    width: 100%;
    height: 5rem;
    display: flex;
    justify-content: center;
}

.topBarItem{
    padding: 2em 2em;
}

#tb2{
    width: 100%;
    max-width: calc(1500px + 2rem);
    display: flex;
    justify-content: space-between;
}

.projectCard {
    display: flex;
    justify-content: center;
    flex-direction: column;
    border-radius: 20px;
    background-color: #1d1f29;
    margin: 0 0 4em 0;
    filter: drop-shadow(8px 8px var(--lightest-blue));
    transition: .5s;
}

.projectCard:hover{
    filter: drop-shadow(12px 12px var(--lightest-blue));
    transition: .5s;
}

.cardPhoto {
    max-width: var(--content-width);
    max-height: auto;
    width: auto;
    border-radius: 20px 20px 0 0;
}

.cardText {
    padding: 0 2em 2em 2em;
    line-height: 2em;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.bodySection {
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding: 0 2em;
}

.cardTextInfo{
    font-size: 20px;
}

h2 {
    font-size: 26px;
    margin: 1em 0;
    font-weight: normal;
}


#pageFooter{
    display: flex;
    justify-content: center;
    padding: .5em 0;
}

#footerCenter{
    display: flex;
    justify-content: space-between;
    height: 3em;
    line-height: 3em;
    width: 100%;
    max-width: var(--content-width);
    flex-direction: row;
}

.bottomRightIcons{
    height: 2em;
    padding: 0 .5em;
}

#footerIconHolder {
    display:flex;
    align-items: center;
}

.contact-icon{
    font-size: 36px;
    padding: 5px 15px 5px 5px;
}

.contact-selection{
    font-size: 22px;
    display: flex;
    align-items: center;
    padding: .5em;
    border-radius: 20px;
    height: 50px;
    transition: .25s;
}
.contact-selection:hover{
    background-color: var(--lighter-blue);
    transition: .15s;
}

.fullPadding{
    padding: 2em;
}

.linkButton {
    background-color: var(--lighter-blue);
    padding: .5em 1em;
    border-radius: 22px;
    transition: .25s;
    height: 1em;
}

.linkButton:hover {
    background-color: var(--lightest-blue);
    transition: .15s;
}

.linkButtonBox {
    font-size: 22px;
    display: flex;
    flex-direction: row;
    padding-top: 1em;
    gap: 1em;
}

.cardTitleBox {
    font-size: 22px;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1em;
    overflow-x: auto;
}

.toolItem{
    border-radius: 22px;
    line-height: 1em;
    background-color: var(--lightest-blue);
    padding: 11px 22px;
    height: 22px;
    overflow:clip;
    white-space: nowrap;
}

